--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
   run:
     - python >=3.5
     - joblib
-    - scikit-learn
+    - scikit-learn <=0.22.1
     - networkx
     - xgboost
     - pandas
@@ -35,7 +35,6 @@ requirements:
 test:
   requires:
     - tensorflow =1.14.0
-    - scikit-learn =0.22.1
   imports:
     - deepchem
   commands:
